# AutoReflect

./: .gitignore  .gitmodules  CMakeLists.txt  Generating.cpp  Generating.hpp  Generator.cpp  LICENSE  Parsing.cpp  Parsing.hpp  README.md  Utilities.cpp  Utilities.hpp
Include/: AutoReflect.hpp  AutoReflectDecls.hpp  SerializeBaseImpl.hpp
Resources/: BaseImpls.txt  BaseTemplateImpls.txt  null_generated.h
